--- a/AnL.ioc
+++ b/AnL.ioc
@@ -62,89 +62,90 @@ Mcu.Pin11=PH1/OSC_OUT
 Mcu.Pin12=PC0
 Mcu.Pin13=PC1
 Mcu.Pin14=PC2
-Mcu.Pin15=PA3
-Mcu.Pin16=PA4
-Mcu.Pin17=PA6
-Mcu.Pin18=PA7
-Mcu.Pin19=PC4
+Mcu.Pin15=PA0/WKUP
+Mcu.Pin16=PA3
+Mcu.Pin17=PA4
+Mcu.Pin18=PA6
+Mcu.Pin19=PA7
 Mcu.Pin2=PF2
-Mcu.Pin20=PC5
-Mcu.Pin21=PB0
-Mcu.Pin22=PB1
-Mcu.Pin23=PB2/BOOT1
-Mcu.Pin24=PF11
-Mcu.Pin25=PF12
-Mcu.Pin26=PF13
-Mcu.Pin27=PF14
-Mcu.Pin28=PF15
-Mcu.Pin29=PG0
+Mcu.Pin20=PC4
+Mcu.Pin21=PC5
+Mcu.Pin22=PB0
+Mcu.Pin23=PB1
+Mcu.Pin24=PB2/BOOT1
+Mcu.Pin25=PF11
+Mcu.Pin26=PF12
+Mcu.Pin27=PF13
+Mcu.Pin28=PF14
+Mcu.Pin29=PF15
 Mcu.Pin3=PF3
-Mcu.Pin30=PG1
-Mcu.Pin31=PE7
-Mcu.Pin32=PE8
-Mcu.Pin33=PE9
-Mcu.Pin34=PE10
-Mcu.Pin35=PE11
-Mcu.Pin36=PE12
-Mcu.Pin37=PE13
-Mcu.Pin38=PE14
-Mcu.Pin39=PE15
+Mcu.Pin30=PG0
+Mcu.Pin31=PG1
+Mcu.Pin32=PE7
+Mcu.Pin33=PE8
+Mcu.Pin34=PE9
+Mcu.Pin35=PE10
+Mcu.Pin36=PE11
+Mcu.Pin37=PE12
+Mcu.Pin38=PE13
+Mcu.Pin39=PE14
 Mcu.Pin4=PF4
-Mcu.Pin40=PB10
-Mcu.Pin41=PB11
-Mcu.Pin42=PD8
-Mcu.Pin43=PD9
-Mcu.Pin44=PD10
-Mcu.Pin45=PD11
-Mcu.Pin46=PD12
-Mcu.Pin47=PD13
-Mcu.Pin48=PD14
-Mcu.Pin49=PD15
+Mcu.Pin40=PE15
+Mcu.Pin41=PB10
+Mcu.Pin42=PB11
+Mcu.Pin43=PD8
+Mcu.Pin44=PD9
+Mcu.Pin45=PD10
+Mcu.Pin46=PD11
+Mcu.Pin47=PD12
+Mcu.Pin48=PD13
+Mcu.Pin49=PD14
 Mcu.Pin5=PF5
-Mcu.Pin50=PG4
-Mcu.Pin51=PG5
-Mcu.Pin52=PG6
-Mcu.Pin53=PG7
-Mcu.Pin54=PG8
-Mcu.Pin55=PC6
-Mcu.Pin56=PC7
-Mcu.Pin57=PC9
-Mcu.Pin58=PA8
-Mcu.Pin59=PA9
+Mcu.Pin50=PD15
+Mcu.Pin51=PG4
+Mcu.Pin52=PG5
+Mcu.Pin53=PG6
+Mcu.Pin54=PG7
+Mcu.Pin55=PG8
+Mcu.Pin56=PC6
+Mcu.Pin57=PC7
+Mcu.Pin58=PC9
+Mcu.Pin59=PA8
 Mcu.Pin6=PF7
-Mcu.Pin60=PA10
-Mcu.Pin61=PA11
-Mcu.Pin62=PA12
-Mcu.Pin63=PA13
-Mcu.Pin64=PA14
-Mcu.Pin65=PA15
-Mcu.Pin66=PC10
-Mcu.Pin67=PD0
-Mcu.Pin68=PD1
-Mcu.Pin69=PD3
+Mcu.Pin60=PA9
+Mcu.Pin61=PA10
+Mcu.Pin62=PA11
+Mcu.Pin63=PA12
+Mcu.Pin64=PA13
+Mcu.Pin65=PA14
+Mcu.Pin66=PA15
+Mcu.Pin67=PC10
+Mcu.Pin68=PD0
+Mcu.Pin69=PD1
 Mcu.Pin7=PF8
-Mcu.Pin70=PD6
-Mcu.Pin71=PG10
-Mcu.Pin72=PG11
-Mcu.Pin73=PG12
-Mcu.Pin74=PG13
-Mcu.Pin75=PG14
-Mcu.Pin76=PG15
-Mcu.Pin77=PB5
-Mcu.Pin78=PB6
-Mcu.Pin79=PB8
+Mcu.Pin70=PD3
+Mcu.Pin71=PD6
+Mcu.Pin72=PG10
+Mcu.Pin73=PG11
+Mcu.Pin74=PG12
+Mcu.Pin75=PG13
+Mcu.Pin76=PG14
+Mcu.Pin77=PG15
+Mcu.Pin78=PB5
+Mcu.Pin79=PB6
 Mcu.Pin8=PF9
-Mcu.Pin80=PB9
-Mcu.Pin81=PE0
-Mcu.Pin82=PE1
-Mcu.Pin83=VP_CRC_VS_CRC
-Mcu.Pin84=VP_DMA2D_VS_DMA2D
-Mcu.Pin85=VP_SYS_VS_tim6
-Mcu.Pin86=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin87=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin88=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin80=PB8
+Mcu.Pin81=PB9
+Mcu.Pin82=PE0
+Mcu.Pin83=PE1
+Mcu.Pin84=VP_CRC_VS_CRC
+Mcu.Pin85=VP_DMA2D_VS_DMA2D
+Mcu.Pin86=VP_SYS_VS_tim6
+Mcu.Pin87=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin88=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin89=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin9=PF10
-Mcu.PinsNb=89
+Mcu.PinsNb=90
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -167,6 +168,10 @@ NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA0/WKUP.GPIOParameters=GPIO_Label
+PA0/WKUP.GPIO_Label=BB [Blue Button]
+PA0/WKUP.Locked=true
+PA0/WKUP.Signal=GPIO_Input
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=STLINK_TX [STM32F103CBT6_PA2]
 PA10.Locked=true
@@ -759,7 +764,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
@@ -771,7 +776,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_DMA2D_Init-DMA2D-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_GFXSIMULATOR_Init-GFXSIMULATOR-false-HAL-false,7-MX_LTDC_Init-LTDC-false-HAL-true,8-MX_SPI5_Init-SPI5-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_USART1_UART_Init-USART1-false-HAL-true,11-MX_I2C3_Init-I2C3-false-HAL-true,12-MX_TIM10_Init-TIM10-false-HAL-true,13-MX_TIM11_Init-TIM11-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_DMA2D_Init-DMA2D-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_LTDC_Init-LTDC-false-HAL-true,7-MX_SPI5_Init-SPI5-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_I2C3_Init-I2C3-false-HAL-true,11-MX_TIM10_Init-TIM10-false-HAL-true,12-MX_TIM11_Init-TIM11-false-HAL-true,13-MX_GFXSIMULATOR_Init-GFXSIMULATOR-false-HAL-true
 RCC.48MHZClocksFreq_Value=120000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
